--- a/ARkansei/index.main.html
+++ b/ARkansei/index.main.html
@@ -199,7 +199,8 @@ function calcDistance(lat, lng) {
 <!-- API_KEY の部分を自身で取得した APIキーで置き換える -->
 <!-- callback=initMap により、マップの準備ができたら initMap 関数が実行される -->
 <!-- ★距離を求めるライブラリを使うために末尾に「&libraries=geometry」を追加 -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgi7ZtevTVN2QlED7qRh3IEw54DHYgVOs&libraries=geometry">
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgi7ZtevTVN2QlED7qRh3IEw54DHYgVOs&libraries=geometry">-->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgi7ZtevTVN2QlED7qRh3IEw54DHYgVOs&callback=initMap&libraries=geometry">
 </script>
 
 <div align="center" class="example">
